--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -221,6 +221,7 @@
                         </VBox>
                      </children>
                   </VBox>
+                  <Button layoutX="105.0" layoutY="583.0" mnemonicParsing="false" onAction="#viewSVG" text="view svg" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="500.0" minWidth="500.0" prefHeight="160.0" prefWidth="100.0">
